--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -322,6 +322,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "10.write a program to concatenate two strings using + operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld\n"
+     ]
+    }
+   ],
+   "source": [
+    "def concatenate_strings(str1, str2):\n",
+    "    return ''.join([str1, str2])\n",
+    "\n",
+    "string1 = \"Hello\"\n",
+    "string2 = \"World\"\n",
+    "\n",
+    "result = concatenate_strings(string1, string2)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "11. Write a code to remove all occurrences of a specific element from a list."
    ]
   },
