--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -327,14 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HelloWorld\n"
+      "HelloWorlds\n"
      ]
     }
    ],
@@ -343,7 +343,7 @@
     "    return ''.join([str1, str2])\n",
     "\n",
     "string1 = \"Hello\"\n",
-    "string2 = \"World\"\n",
+    "string2 = \"Worlds\"\n",
     "\n",
     "result = concatenate_strings(string1, string2)\n",
     "print(result)\n"
